# QuizLITE

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/: .gitignore
.github/linters/: linter_checks.xml
.github/workflows/: build.yml
Database/: DatabaseManager.cpp  DatabaseManager.h
Interface/: AddQuestionsPage.cpp  AddQuestionsPage.h  CreateSetPage.cpp  CreateSetPage.h  EnterSetPage.cpp  EnterSetPage.h  FlashcardPage.cpp  FlashcardPage.h  InverseMCPage.cpp  InverseMCPage.h  LibraryPage.cpp  LibraryPage.h  MCPage.cpp  MCPage.h  MainWindow.cpp  MainWindow.h
Menu/: MainWindow.cpp  MainWindow.h  NewSet.h  Search.cpp  Search.h  Shortcuts.cpp  Shortcuts.h
Shortcuts/: NewSet.cpp  NewSet.h
StudyingMethods/: Flashcards.cpp  Flashcards.h  InverseMultipleChoice.cpp  InverseMultipleChoice.h  MultipleChoice.cpp  MultipleChoice.h  StudyMethods.h
Syncing/: Github.cpp  Github.h  Google.cpp  Google.h
User/: UserSession.cpp  UserSession.h  UserSessionInfo.cpp  UserSessionInfo.h
tests/: main.cpp  testDatabase.cpp  testFlashcards.cpp  testInverseMultipleChoice.cpp  testMultipleChoice.cpp  testUser.cpp
